fixed dvh not on mobile

--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -15,7 +15,8 @@
   justify-content: space-between;
   align-items: stretch;
   flex-direction: column;
-  height: 100dvh;
+  min-height: 100dvh;
+  min-height: -webkit-fill-available;
 }
 .App {
   overflow: hidden;
